samples/_failures_safe/1761215293_dd8dc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3464f5f8.c: In function ‘main’:
./samples/SAFE/__tmp_3464f5f8.c:199:5: error: expected declaration or statement at end of input
  199 |     int token_count = tokenize(input, tokens, MAX_TOKENS);
      |     ^~~
